--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,13 @@ ipython
 faker
 pyaml
 pillow
-
 gunicorn
 psycopg2-binary
 dj-database-url
 whitenoise
+django-allauth
+django-tailwind
+django-crispy-forms
+crispy-tailwind
+qrcode
+promptpay
